[project]
name = "lumicks-doltcli"
version = "0.1.18"
license = {file = "LICENSE"}
description = "Slim Python interface for Dolt's CLI API."
authors = [
  {name = "Max Hoffman", email = "max@dolthub.com"},
  {name = "Oscar Batori", email = "oscar@dolthub.com"},
  {name = "LUMICKS ml-team", email = "ml-team@lumicks.com"}
]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python"
]


[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '''
(
  /(
      \.git
    | \.github
    | \.venv
  )/
)
'''

[tool.flake8]
ignore = ['W504', 'E501', 'F407', 'W503', 'E203', 'C901']
max-line-length = 100
max-complexity = 18
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
exclude = ['.venv']
per-file-ignores = ['**/__init__.py:F401']

[tool.mypy]
python_version = "3.8"
warn_unused_configs = true

ignore_missing_imports = true
